src/nl/rubensten/texifyidea/bibtex/grammar/Bibtex.bnf
{
    parserClass="nl.rubensten.texifyidea.bibtex.parser.BibtexParser"

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="Bibtex"
    psiImplClassSuffix="Impl"
    psiPackage="nl.rubensten.texifyidea.bibtex.psi"
    psiImplPackage="nl.rubensten.texifyidea.bibtex.psi.impl"

    elementTypeHolderClass="nl.rubensten.texifyidea.bibtex.psi.BibtexTypes"
    elementTypeClass="nl.rubensten.texifyidea.bibtex.psi.BibtexElementType"
    tokenTypeClass="nl.rubensten.texifyidea.bibtex.psi.BibtexTokenType"

    tokens=[
        WHITE_SPACE='regexp:\s+'
        DISPLAY_MATH_START='\['
        DISPLAY_MATH_END='\]'
        INLINE_MATH_START='$'
        INLINE_MATH_END='$'
        COMMAND_TOKEN='regexp:\\([a-zA-Z]+|.|\n|\r)'
        COMMENT_TOKEN='regexp:%[^\r\n]*'
        STAR='*'
        NORMAL_TEXT='regexp:[^\\{}%\[\]$]+'
        COMMAND_TOKEN='regexp:\\([a-zA-Z]+|.|\n|\r)'
        CITATION_TYPE="regexp:@([^ @'\",\#}{~% ]+)"
        CITATION_KEY="regexp:[^ @'\",\#}{~% ]+"
        VALUE="regexp:[^ @'\",\#}{~% ]+"
        ASSIGNMENT='='
        SEPERATOR=','
        QUOTATION_MARK='"'
        CONCATENATE='#'
    ]
}

// BibTeX

bibtex_entry ::= CITATION_TYPE OPEN_BRACKET VALUE SEPERATOR (bibtex_key_value_pair)* CLOSE_BRACE

bibtex_key_value_pair ::= bibtex_key ASSIGNMENT bibtex_value

bibtex_key ::= CITATION_KEY

bibtex_value ::= bibtex_concatenate_value | bibtex_brace_value | bibtex_string

bibtex_concatenate_value ::= (bibtex_string) CONCATENATE (bibtex_string | bibtex_concatenate_value)

bibtex_brace_value ::= OPEN_BRACE NORMAL_TEXT CLOSE_BRACE

bibtex_string ::= QUOTATION_MARK NORMAL_TEXT QUOTATION_MARK

// LaTeX

latexFile ::= content*

content ::= no_math_content | math_environment

no_math_content ::= comment | commands | group | open_group | NORMAL_TEXT

commands ::= COMMAND_TOKEN STAR? parameter*

parameter ::= optional_param | required_param

optional_param ::= open_group

required_param ::= group

group ::= OPEN_BRACE content* CLOSE_BRACE

open_group ::= OPEN_BRACKET content* CLOSE_BRACKET

comment ::= COMMENT_TOKEN

math_environment ::= inline_math | display_math

inline_math ::= INLINE_MATH_START (no_math_content)* INLINE_MATH_END

display_math ::= DISPLAY_MATH_START (no_math_content)* DISPLAY_MATH_END
